syntax = "proto3";

package artin.couriermanagement.finance;

option go_package = "gitlab.artin.ai/backend/courier-management/grpc/finance/go;financePb";

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";

message OfferCancelledEvent {
  string offer_id = 1 [(validate.rules).string.uuid = true];
  string courier_id = 2 [(validate.rules).string.uuid = true];
  enum Reason {
    BY_CLIENT = 0;
    TIMEOUT = 1;
    ACCEPTED_BY_ANOTHER_COURIER = 2;
  }
  Reason cancel_reason = 3;
}

message OfferAcceptedEvent {
  string offer_id = 1 [(validate.rules).string.uuid = true];
  string courier_id = 2 [(validate.rules).string.uuid = true];
  string desc = 3;
}

message OfferRejectedEvent {
  string offer_id = 1 [(validate.rules).string.uuid = true];
  string courier_id = 2 [(validate.rules).string.uuid = true];
  string desc = 3;
}

message PaymentMethod {
  string id = 1;
  string type = 2;
  message Card {
    string brand = 1;
    string checks = 2;
    string country = 3;
    string exp_month = 4;
    string exp_year = 5;
    string fingerprint = 6;
    string funding = 7;
    string last4 = 8;
    string networks = 9;
    string three_d_secure_usage = 10;
    string wallet = 11;
  }
  Card card = 3;
}

message AccountRole {
  string id = 1 [(validate.rules).string.uuid = true];
  string user_id = 2 [(validate.rules).string.uuid = true];
  google.protobuf.Timestamp from_date = 3;
  google.protobuf.Timestamp to_date = 4;
  enum Status {
    ACTIVE = 0;
    DELETED = 1;
    BLOCKED = 2;
  }
  Status status = 5;
  enum Type {
    OWNER= 0;
    CLIENT= 1;
    ADMIN= 2;
  }
  Type type = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message Account {
  string id = 1 [(validate.rules).string.uuid = true];
  repeated AccountRole account_roles = 2 [(validate.rules).repeated.min_items = 1];
  enum Status {
    OPEN = 0;
    BLOCKED = 1;
    CLOSED = 2;
  }
  Status status = 3;
  enum Type {
    TAX = 0;
    REVENUE = 1;
    WALLET = 2;
    CUSTOMER = 3;
    COURIER = 4;
    ARTIN = 5;
  }
  Type type = 4;
  repeated PaymentMethod payment_methods = 5;
  string default_payment_method = 6;
  int64 balance = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message Transaction {
  string id = 1 [(validate.rules).string.uuid = true];
  int64 amount = 2;
  string currency = 3;
  enum Status {
    DONE = 0;
    BLOCK = 1;
    SYS_BLOCK = 2;
    REJECT = 3;
    SCHEDULED = 4;
    SETTLED = 5;
  }
  Status status = 4;
  enum PaymentMethod {
    acss_debit = 0;
    afterpay_clearpay = 1;
    alipay = 2;
    au_becs_debit = 3;
    bacs_debit = 4;
    bancontact = 5;
    card = 6;
    card_present = 7;
    eps = 8;
    fpx = 9;
    giropay = 10;
    grabpay = 11;
    ideal = 12;
    interac_present = 13;
    oxxo = 14;
    p24 = 15;
    sepa_debit = 16;
    sofort = 17;
    other = 18;
  }
  PaymentMethod payment_method = 5;
  Account source_account = 6;
  Account target_account = 7;
  string request_id = 8;
  string description = 9;
  int64 target_balance = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message OnboardingUrl {
  string url = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp expires_at = 3;
  string refresh_url = 4;
  string return_url = 5;
}

message OnboardingResult {
  bool successful = 1;
  string desc = 2;
}

